--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@turf/turf": "^5.1.6",
     "husky": "^4.3.0",
     "leaflet": "^1.7.1",
     "lint-staged": "^10.4.0",
