Refactor of React map breakable toy
- Leverage typescript
- Leverage redux and redux-loop
- Leverage functional components
- Leverage `useEffect` hook

Prettify code

Add comments to useEffect hooks

Successfully load pizza places from local JSON

Successfully load pizza places from local JSON

Add leaflet type to click event
Fix logic for conditional rendering
Add typescript type checking

Remove console.log statements
Leverage update render logic in component

--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
-  "name": "react-toy-map",
+  "name": "hello-map",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "husky": "^4.3.0",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^24.9.1",
+    "@types/leaflet": "^1.5.19",
+    "@types/node": "^12.12.67",
+    "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "leaflet": "^1.7.1",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-loop": "^6.0.1",
+    "ts.data.json": "^1.4.0",
+    "typesafe-actions": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "tsc",
     "test": "react-scripts test",
+    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "eject": "react-scripts eject"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.52",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "prettier": "^2.1.2",
+    "typescript": "^3.9.7"
   }
 }
